Added font file and finished html on template

--- a/template.html
+++ b/template.html
@@ -9,8 +9,55 @@
     <link rel="stylesheet" href="styles/template.css"
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <header>
+
+    </header>
+    <main class="container">
+      <div class="presentation">
+        <div class="slider">
+          <img src="images/test1.JPG" alt="">
+        </div>
+        <div class="fiche">
+          <h2>SALLES DE RÉUNIONS</h2>
+          <div class="features">
+            <div class="pers">
+              <img src="icons/Personnes.svg">
+              <p>
+                20 ou 50
+              </p>
+            </div>
+            <div class="wifi">
+              <img src="icons/Internet.svg">
+              <p>
+                WIFI
+              </p>
+            </div>
+          </div>
+          <div class="texte">
+            <p>
+              Deux salles : 20 et 50 places.
+            </p>
+            <p>
+              Possibilité de deux salles supplémentaires dans la salle de réception.
+            </p>
+            <p>
+              Équipées de :
+            </p>
+            <ul>
+              <li>Paperboards</li>
+              <li>Écrans</li>
+              <li>Vidéoprojecteur (sur demande)</li>
+            </ul>
+          </div>
+          <div class="button">
+            <a href="#">RÉSERVEZ</a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
