update booking form

--- a/pages/book.html
+++ b/pages/book.html
@@ -62,34 +62,38 @@
 
                     </section>
                     <section class="thirdFlexbox">
+
                       <section class="item book">
                         <p>Envisagez-vous une restauration ?</p>
                         <div class="choice">
-                          <div class="round">
-                            <input type="checkbox" id="checkbox" >
-                            <label for="checkbox">Oui, une restauration chaude</label>
-                            </div>
-                          <section class="resto restoType">
-                            <div class="round">
-                              <input class="round" type="checkbox" id="cold" name="froid">
-                              <label for="chaud">Oui, une restauration froide</label>
-                            </div>
-                          </section>
-                          <section class="resto restoItems">
-                            <div class="round">
-                              <input class="round" type="checkbox" id="coffee" name="cafe">
-                              <label for="cafe">Un accueil café</label>
-                            </div>
-                            <div class="round">
-                              <input class="round" type="checkbox" id="cocktail" name="cocktail">
-                              <label for="cocktail">Un cocktail</label>
-                            </div>
-                            <div class="round">
-                              <input class="round" type="checkbox" id="no" name="non">
-                              <label for="non">Non</label>
-                            </div>
-                          </section>
-                        </div>
+                          <label class="choiceContainer">Oui, une restauration chaude
+                            <input type="checkbox" checked="checked">
+                            <span class="checkmark"></span>
+                          </label>
+
+                          <label class="choiceContainer">Oui, une restauration froide
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                          </label>
+
+                          <label class="choiceContainer">Un accueil café
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                          </label>
+
+                          <label class="choiceContainer">Un cocktail
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                          </label>
+
+                          <label class="choiceContainer">Non
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                          </label>
+
+
+                        </section>
+
                       </section>
                     </section>
                     <section class="fourthFlexbox">
