update booking form

--- a/pages/book.html
+++ b/pages/book.html
@@ -15,99 +15,99 @@
     </head>
     <main>
       <section class="background container">
-                  <form class="" action="book.html" method="post">
-                    <section class="firstFlexobx">
-                      <section class="item">
-                        <label for="subject">Salle</label><br>
-                        <select name="room" id="subject">
-                          <option value="$500">Salle de réception</option>
-                          <option value="$1000" selected="selected">Amphithéâtre Pierre Selleron</option>
-                          <option value="$1500">Salle de réunion</option>
-                          <option value="$2000">Hall d'accueil</option>
-                          <option value="$2000">Espace numérique</option>
-                        </select>
-                      </section>
-                      <section class="item">
-                        <label for="nameinput">Nom</label><br>
-                        <input class="main" type="text" name="nom" id="nameinput">
-                      </section>
-                      <section class="item">
-                        <label for="nameinput">Prénom</label><br>
-                        <input class="main" type="text" name="prenom" id="nameinput">
-                      </section>
-                      <section class="item">
-                        <label for="subject">Numéro de téléphone</label><br>
-                        <input class="main" type="text" name="subject" id="subjectinput">
-                      </section>
-                      <section id="email" class="item">
-                        <label for="email">E-mail</label><br>
-                        <input class="main" type="text" name="email" id="emailinput">
-                      </section>
-                    </section>
-                    <section class="secondFlexbox">
-                      <section class="item">
-                        <label for="nameinput">Date</label><br>
-                        <input class="main" type="text" name="nom" id="nameinput">
-                      </section>
-                      <section class="item">
-                        <label for="nameinput">Horaires</label><br>
-                        <input class="main" type="text" name="prenom" id="nameinput">
-                      </section>
-                      <section class="item">
-                        <label for="nameinput">Nombre de participants</label><br>
-                        <input class="main" type="text" name="prenom" id="nameinput">
-                      </section>
-                    </section>
-                    <section  class="secondFlexbox">
-
-                    </section>
-                    <section class="thirdFlexbox">
-
-                      <section class="item book">
-                        <p>Envisagez-vous une restauration ?</p>
-                        <div class="choice">
-                          <label class="choiceContainer">Oui, une restauration chaude
-                            <input type="checkbox" checked="checked">
-                            <span class="checkmark"></span>
-                          </label>
-
-                          <label class="choiceContainer">Oui, une restauration froide
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                          </label>
-
-                          <label class="choiceContainer">Un accueil café
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                          </label>
-
-                          <label class="choiceContainer">Un cocktail
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                          </label>
-
-                          <label class="choiceContainer">Non
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                          </label>
-
-
-                        </section>
-
-                      </section>
-                    </section>
-                    <section class="fourthFlexbox">
-                      <section class="item message">
-                        <label for="remarks">Avez-vous des remarques ?</label>
-                        <textarea class="writeHere"name="description" rows="8" cols="8"></textarea>
-                      </section>
-                    </section>
-                    <section class="ok">
-                      <input type="submit" value="Ok">
-                    </section>
-                  </form>
+        <form class="formContainer" action="book.html" method="post">
+          <section class="firstFlexobx">
+            <section class="item">
+              <label for="subject">Salle</label><br>
+              <select name="room" id="subject">
+                <option value="$500">Salle de réception</option>
+                <option value="$1000" selected="selected">Amphithéâtre Pierre Selleron</option>
+                <option value="$1500">Salle de réunion</option>
+                <option value="$2000">Hall d'accueil</option>
+                <option value="$2000">Espace numérique</option>
+              </select>
+            </section>
+            <section class="item">
+              <label for="nameinput">Nom</label><br>
+              <input class="main" type="text" name="nom" id="nameinput">
+            </section>
+              <section class="item">
+               <label for="nameinput">Prénom</label><br>
+               <input class="main" type="text" name="prenom" id="nameinput">
+              </section>
+              <section class="item">
+               <label for="subject">Numéro de téléphone</label><br>
+               <input class="main" type="text" name="subject" id="subjectinput">
+              </section>
+              <section id="email" class="item">
+                <label for="email">E-mail</label><br>
+                <input class="main" type="text" name="email" id="emailinput">
               </section>
             </section>
+
+            <section class="secondFlexbox">
+              <section class="item">
+                <label for="nameinput">Date</label><br>
+                <input class="main" type="text" name="nom" id="nameinput">
+              </section>
+              <section class="item">
+                <label for="nameinput">Horaires</label><br>
+                <input class="main" type="text" name="prenom" id="nameinput">
+              </section>
+              <section class="item">
+               <label for="nameinput">Nombre de participants</label><br>
+               <input class="main" type="text" name="prenom" id="nameinput">
+              </section>
+              </section>
+              <section class="thirdFlexbox">
+
+               <section class="item book">
+                <p>Envisagez-vous une restauration ?</p>
+                <div class="choice">
+                  <div class="restoChoice">
+
+                    <label class="choiceContainer">Oui, une restauration chaude
+                     <input type="checkbox" checked="checked">
+                     <span class="checkmark"></span>
+                    </label>
+
+                    <label class="choiceContainer">Oui, une restauration froide
+                      <input type="checkbox">
+                      <span class="checkmark"></span>
+                    </label>
+
+                  </div>
+                  <div class="secondChoices">
+                    <label class="choiceContainer">Un accueil café
+                      <input type="checkbox">
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label class="choiceContainer">Un cocktail
+                      <input type="checkbox">
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label class="choiceContainer">Non
+                      <input type="checkbox">
+                      <span class="checkmark"></span>
+                    </label>
+
+                  </div>
+                </section>
+              </section>
+              <section class="fourthFlexbox">
+                <section class="item message">
+                  <label for="remarks">Avez-vous des remarques ?</label>
+                  <textarea class="writeHere"name="description" rows="8" cols="8"></textarea>
+                </section>
+              </section>
+              <section class="booking">
+                <input type="submit" value="Réserver">
+              </section>
+            </form>
+        </section>
+      </section>
     </main>
     <footer></footer>
   </body>
