--- a/pages/book.html
+++ b/pages/book.html
@@ -5,7 +5,8 @@
     <title>Titre de ma page</title>
     <meta name="description" contents="description" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/book.css">
     <script src="scripts/main.js">
     </script>
   </head>
