--- a/pages/book.html
+++ b/pages/book.html
@@ -14,7 +14,7 @@
     <head>
 
     </head>
-    <main>
+    <main class="container">
       <section class="background container">
         <form class="formContainer" action="book.html" method="post">
           <section class="firstFlexobx">
@@ -103,8 +103,9 @@
                   <textarea class="writeHere"name="description" rows="8" cols="8"></textarea>
                 </section>
               </section>
+
               <section class="booking">
-                <input type="submit" value="Réserver">
+                <input class="bookingButton" type="submit" value="Réserver">
               </section>
             </form>
         </section>
