--- a/template.html
+++ b/template.html
@@ -13,47 +13,48 @@
 
     </header>
     <main class="container">
-      <div class="presentation">
+
         <div class="slider">
           <img src="images/test1.JPG" alt="">
         </div>
-        <div class="fiche">
-          <h2>SALLES DE RÉUNIONS</h2>
-          <div class="features">
-            <div class="pers">
-              <img src="icons/Personnes.svg">
-              <p>
-                20 ou 50
-              </p>
+        <div class="presentation">
+          <div class="fiche">
+            <h2>SALLES DE RÉUNIONS</h2>
+            <div class="features">
+              <div class="pers">
+                <img src="icons/Personnes.svg">
+                <p>
+                  20 ou 50
+                </p>
+              </div>
+              <div class="wifi">
+                <img src="icons/Internet.svg">
+                <p>
+                  WIFI
+                </p>
+              </div>
             </div>
-            <div class="wifi">
-              <img src="icons/Internet.svg">
+            <div class="info">
               <p>
-                WIFI
+                Deux salles : 20 et 50 places.
               </p>
+              <p>
+                Possibilité de deux salles supplémentaires dans la salle de réception.
+              </p>
+              <p>
+                Équipées de :
+              </p>
+              <ul>
+                <li>Paperboards</li>
+                <li>Écrans</li>
+                <li>Vidéoprojecteur (sur demande)</li>
+              </ul>
+            </div>
+            <div class="button">
+              <a href="pages/book.html">RÉSERVEZ</a>
             </div>
           </div>
-          <div class="texte">
-            <p>
-              Deux salles : 20 et 50 places.
-            </p>
-            <p>
-              Possibilité de deux salles supplémentaires dans la salle de réception.
-            </p>
-            <p>
-              Équipées de :
-            </p>
-            <ul>
-              <li>Paperboards</li>
-              <li>Écrans</li>
-              <li>Vidéoprojecteur (sur demande)</li>
-            </ul>
-          </div>
-          <div class="button">
-            <a href="#">RÉSERVEZ</a>
-          </div>
-        </div>
-      </div>
+        </div>  
     </main>
     <footer>
 
