update formulaire reservation

--- a/pages/book.html
+++ b/pages/book.html
@@ -30,7 +30,9 @@
     </head>
     <main class="container">
       <section class="container blocOne">
-        <img class="arrow" src="../images/Arrow.png" alt="Arrow"></img>
+        <section class="container arrow">
+          <img src="../images/Arrow.png" alt="Arrow"></img>
+        </section>
         <section class="container text">
           <section class="container title">
             <span class="orange"></span>
@@ -48,11 +50,11 @@
                 <section class="item">
                   <label for="subject">Salle</label><br>
                   <select name="room" id="subject">
-                    <option value="$500">Salle de réception</option>
-                    <option value="$1000" selected="selected">Amphithéâtre Pierre Selleron</option>
-                    <option value="$1500">Salle de réunion</option>
-                    <option value="$2000">Hall d'accueil</option>
-                    <option value="$2000">Espace numérique</option>
+                    <option value="1">Salle de réception</option>
+                    <option value="2" selected="selected">Amphithéâtre Pierre Selleron</option>
+                    <option value="3">Salle de réunion</option>
+                    <option value="4">Hall d'accueil</option>
+                    <option value="5">Espace numérique</option>
                   </select>
                 </section>
                 <section class="item">
