--- a/pages/book.html
+++ b/pages/book.html
@@ -44,8 +44,8 @@
         </section>
       </section>
       <section class="blocTwo container">
-        <section class="background container">
-          <form class="formContainer" action="book.html" method="post">
+        <section class="background formContainer ">
+          <form class="formContainer " action="book.html" method="post">
               <section class="firstFlexobx">
                 <section class="item">
                   <label for="subject">Salle</label><br>
