--- a/nav.html
+++ b/nav.html
@@ -25,6 +25,30 @@
         </div>
     </nav>
 
+    <footer class="container">
+      <section class="footerContainer container">
+        <div class="footerDiv container">
+          <h6>Contacts</h6>
+          <span>congres@issoudun.fr</span>
+          <span>Fax : 0254033267</span>
+          <span>+33 2 54 03 32 61</span>
+          <span>Centre des Congrès «Champs Élysées»</span>
+          <span>Boulevard Roosevelt</span>
+          <span>BP 150</span>
+          <span>36105 Issoudun</span>
+        </div>
+        <div class="footerDiv container">
+          <h6>À découvrir sur Issoudun</h6>
+          <a href="https://www.biptv.tv/">Bip TV</a>
+          <a href="https://www.ccacissoudun.tv/">Centre Culturel Albert Camus</a>
+          <a href="https://www.museeissoudun.tv/">Musée de l'Hospice Saint Roch</a>
+          <a href="http://www.issoudun.fr/">Site de la ville d'Issoudun</a>
+        </div>
+        <div class="footerDiv container">
+          <h6><a href="#">Mentions légales</a></h6>
+        </div>
+      </section>
+    </footer>
     <script src="nav.js"></script>
 </body>
 </html>
