--- a/pages/book.html
+++ b/pages/book.html
@@ -59,15 +59,15 @@
                 </section>
                 <section class="item">
                   <label for="nameinput">Nom</label><br>
-                  <input class="main" type="text" name="nom" id="nameinput">
+                  <input class="main" type="text" name="name" id="nameinput">
                 </section>
                   <section class="item">
                    <label for="nameinput">Prénom</label><br>
-                   <input class="main" type="text" name="prenom" id="nameinput">
+                   <input class="main" type="text" name="firstname" id="firstnameinput">
                   </section>
                   <section class="item">
                    <label for="subject">Numéro de téléphone</label><br>
-                   <input class="main" type="text" name="subject" id="subjectinput">
+                   <input class="main" type="text" name="phonenumber" id="subjectinput">
                   </section>
                   <section id="email" class="item">
                     <label for="email">E-mail</label><br>
@@ -78,15 +78,15 @@
                 <section class="secondFlexbox">
                   <section class="item">
                     <label for="nameinput">Date</label><br>
-                    <input class="main" type="text" name="nom" id="nameinput">
+                    <input class="main" type="text" name="date" id="nameinput">
                   </section>
                   <section class="item">
                     <label for="nameinput">Horaires</label><br>
-                    <input class="main" type="text" name="prenom" id="nameinput">
+                    <input class="main" type="text" name="hours" id="nameinput">
                   </section>
                   <section class="item">
                    <label for="nameinput">Nombre de participants</label><br>
-                   <input class="main" type="text" name="prenom" id="nameinput">
+                   <input class="main" type="text" name="number" id="nameinput">
                   </section>
                   </section>
                   <section class="thirdFlexbox">
@@ -139,7 +139,30 @@
              <input class="bookingButton" type="submit" value="Réserver">
             </section>
     </main>
-    <footer></footer>
+    <footer class="center">
+      <section class="footerContainer container">
+        <div class="footerDiv container">
+          <h6>Contacts</h6>
+          <span>congres@issoudun.fr</span>
+          <span>Fax : 0254033267</span>
+          <span>+33 2 54 03 32 61</span>
+          <span>Centre des Congrès «Champs Élysées»</span>
+          <span>Boulevard Roosevelt</span>
+          <span>BP 150</span>
+          <span>36105 Issoudun</span>
+        </div>
+        <div class="footerDiv container">
+          <h6>À découvrir sur Issoudun</h6>
+          <a href="https://www.biptv.tv/">Bip TV</a>
+          <a href="https://www.ccacissoudun.tv/">Centre Culturel Albert Camus</a>
+          <a href="https://www.museeissoudun.tv/">Musée de l'Hospice Saint Roch</a>
+          <a href="http://www.issoudun.fr/">Site de la ville d'Issoudun</a>
+        </div>
+        <div class="footerDiv container">
+          <h6><a href="#">Mentions légales</a></h6>
+        </div>
+      </section>
+    </footer>
     <script src="nav.js"></script>
   </body>
 </html>
