--- a/nav.html
+++ b/nav.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="nav.css"> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
     <title>Nav Bar</title>
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <h4>Centre Congrès</h4>
-        </div>
+        <a class="logo" href="index.html">Centre de Congrès</a>
         <ul class="nav-links">
             <li><a href="#">Nos Salles</a></li>
             <li><a href="#">Réserver</a></li>
@@ -24,31 +22,6 @@
             <div class="line3"></div>
         </div>
     </nav>
-
-    <footer class="container">
-      <section class="footerContainer container">
-        <div class="footerDiv container">
-          <h6>Contacts</h6>
-          <span>congres@issoudun.fr</span>
-          <span>Fax : 0254033267</span>
-          <span>+33 2 54 03 32 61</span>
-          <span>Centre des Congrès «Champs Élysées»</span>
-          <span>Boulevard Roosevelt</span>
-          <span>BP 150</span>
-          <span>36105 Issoudun</span>
-        </div>
-        <div class="footerDiv container">
-          <h6>À découvrir sur Issoudun</h6>
-          <a href="https://www.biptv.tv/">Bip TV</a>
-          <a href="https://www.ccacissoudun.tv/">Centre Culturel Albert Camus</a>
-          <a href="https://www.museeissoudun.tv/">Musée de l'Hospice Saint Roch</a>
-          <a href="http://www.issoudun.fr/">Site de la ville d'Issoudun</a>
-        </div>
-        <div class="footerDiv container">
-          <h6><a href="#">Mentions légales</a></h6>
-        </div>
-      </section>
-    </footer>
-    <script src="nav.js"></script>
+    <script src="nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
 </body>
 </html>
