update book + image homepage

--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta name"description" content="description de ma page"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/index.css">
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <header>
+
+    </header>
+    <main>
+      <section class="cinema container">
+        <section class="cineLogo container">
+          <img src="images/LogoCinema.png" alt="logoCine">
+        </section>
+        <section class="leftPart container">
+          <section class="cineText container">
+            <h3>Un voyage. Des émotions. Vos cinémas !</h3>
+            <p>3 salles de cinéma pour retrouver vos films préférés</p>
+          </section>
+          <button class="cineAccess" stype="button" name="button">Accéder au site</button>
+        </section>
+      </section>
+
+    </main>
+    <footer></footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
