--- a/index.html
+++ b/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8"/>
-    <title>Titre de ma page</title>
-    <meta name"description" content="description de ma page"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="description" content="description de ma page">
     <link rel="stylesheet" href="styles/main.css">
+    <title>Card Issoudun Project </title>
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <script src="scripts/main.js"></script>
+    <div class="containerCard">
+      <div class="card" id="salleDeR">
+        <div class="cardLeftPart">
+          <img src="images\salle de réception\grandeSalle1.jpg" alt="Salle de réception">
+        </div>
+        <div class="cardRightPart">
+          <h2>SALLE DE RÉCEPTION</h2>
+        </div>
+      </div>
+      <div class="card">
+        <div class="cardLeftPart">
+          <img src="images\amphithéâtre\amphi1.jpg" alt="Amphithéatre Pierre Selleron">
+        </div>
+        <div class="cardRightPart">
+          <h2>AMPHITHÉATRE PIERRE SELLERON</h2>
+        </div>
+      </div>
+      <div class="card">
+          <div class="cardLeftPart">
+            <img src="images\hall\hall4.jpg" alt="Hall d'accueil">
+          </div>
+          <div class="cardRightPart">
+            <h2>HALL D'ACCUEIL</h2>
+          </div>
+      </div>
+      <div class="card">
+        <div class="cardLeftPart">
+          <img src="images\cuisines professionnelles\cuisines2.jpg" alt="Cuisines Professionelles">
+        </div>
+        <div class="cardRightPart">
+          <h2>CUISINES PROFESSIONELLES</h2>
+        </div>
+      </div>
+      <div class="card">
+        <div class="cardLeftPart">
+          <img src="images\espace numérique\epn2.jpg" alt="Espace numérique">
+        </div>
+        <div class="cardRightPart">
+          <h2>ESPACES NUMÉRIQUES</h2>
+        </div>
+      </div>
+      <div class="card">
+        <div class="cardLeftPart">
+          <img src="images\salles de réunion\reunion5.jpg" alt="Hall de réunion">
+        </div>
+        <div class="cardRightPart">
+          <h2>HALL DE RÉUNION</h2>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
