--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -43,7 +43,7 @@
       </section>
       <section class="blocTwo container">
         <section class="background formContainer ">
-          <form class="formContainer " action="index.php" method="post">
+          <form class="formContainer " action="contacts.php" method="post">
               <section class="firstFlexobx">
                 <section class="item">
                   <label for="nameinput">Nom</label><br>
