--- a/pages/book.html
+++ b/pages/book.html
@@ -45,16 +45,16 @@
       </section>
       <section class="blocTwo container">
         <section class="background formContainer ">
-          <form class="formContainer " action="index.php" method="post">
+          <form class="formContainer " action="mail.php" method="post">
               <section class="firstFlexobx">
                 <section class="item">
                   <label for="subject">Salle</label><br>
                   <select name="room" id="subject">
-                    <option value="1">Salle de réception</option>
-                    <option value="2" selected="selected">Amphithéâtre Pierre Selleron</option>
-                    <option value="3">Salle de réunion</option>
-                    <option value="4">Hall d'accueil</option>
-                    <option value="5">Espace numérique</option>
+                    <option value="salle_de_reception">Salle de réception</option>
+                    <option value="amphitheatre_pierre_selleron" selected="selected">Amphithéâtre Pierre Selleron</option>
+                    <option value="salle_de_reunion">Salle de réunion</option>
+                    <option value="hall_d_accueil">Hall d'accueil</option>
+                    <option value="espace_numerique">Espace numérique</option>
                   </select>
                 </section>
                 <section class="item">
@@ -66,7 +66,7 @@
                    <input class="main" type="text" name="firstname" id="firstnameinput">
                   </section>
                   <section class="item">
-                   <label for="subject">Numéro de téléphone</label><br>
+                   <label for="phonenumber">Numéro de téléphone</label><br>
                    <input class="main" type="text" name="phonenumber" id="subjectinput">
                   </section>
                   <section id="email" class="item">
@@ -77,7 +77,7 @@
 
                 <section class="secondFlexbox">
                   <section class="item">
-                    <label for="nameinput">Date</label><br>
+                    <label for="date">Date</label><br>
                     <input class="main" type="text" name="date" id="nameinput">
                   </section>
                   <section class="item">
@@ -85,7 +85,7 @@
                     <input class="main" type="text" name="hours" id="nameinput">
                   </section>
                   <section class="item">
-                   <label for="nameinput">Nombre de participants</label><br>
+                   <label for="number">Nombre de participants</label><br>
                    <input class="main" type="text" name="number" id="nameinput">
                   </section>
                   </section>
@@ -122,7 +122,6 @@
                           <input type="checkbox">
                           <span class="checkmark"></span>
                         </label>
-
                       </div>
                     </section>
                   </section>
