--- a/pages/book.html
+++ b/pages/book.html
@@ -133,9 +133,10 @@
                   </section>
                 </section>
                 <section class="booking container">
-                 <input class="bookingButton" type="submit" value="send" name="send">
+                 <input class="bookingButton" type="submit" value="RESERVER" name="send">
                 </section>
               </form>
+
     </main>
     <footer class="center">
       <section class="footerContainer container">
