Changed frontface for helvetica

--- a/pages/SalleDeReunion.html
+++ b/pages/SalleDeReunion.html
@@ -51,20 +51,20 @@
           <h2>SALLES DE RÉUNIONS</h2>
           <div class="features">
             <div class="specs">
-              <div class="TEST">
+              <div class="objects">
                 <img src="../icons/Personnes.svg">
               </div>
-              <div class="TEST">
+              <div class="objects">
                 <p>
                   20 ou 50
                 </p>
               </div> 
             </div>
             <div class="specs">
-              <div class="TEST">
+              <div class="objects">
                 <img src="../icons/Internet.svg">
               </div>
-              <div class="TEST">
+              <div class="objects">
                 <p>
                   WIFI
                 </p>
