Nav path / slider arrows

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="nav.css"> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
+    <link rel="stylesheet" href="styles/nav.css"> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
     <title>Nav Bar</title>
 </head>
 <body>
@@ -22,6 +22,6 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <script src="nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
+    <script src="scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
 </body>
 </html>
