--- a/pages/amphiteatre.html
+++ b/pages/amphiteatre.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/template.css">
     <link rel="stylesheet" href="../styles/slider.css">
+    <link rel="stylesheet" href="../styles/nav.css">
     <script src="../scripts/nav.js"></script>
   </head>
   <body>
