--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -72,18 +72,7 @@
               </div>
               <div class="objects">
                 <p>
-                  775 mètres carrés
-                </p>
-              </div> 
-            </div>
-            <!-- SCÈNE -->
-            <div class="specs">
-              <div class="objects">
-                <img src="../icons/Scène.svg">
-              </div>
-              <div class="objects">
-                <p>
-                  Scène : 8 x 5 x 0,8 mètres
+                  775 mètres carrés (Scène : 8 x 5 x 0,8 mètres)
                 </p>
               </div> 
             </div>
