--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -76,6 +76,17 @@
                 </p>
               </div> 
             </div>
+            <!-- SCÈNE -->
+            <div class="specs">
+              <div class="objects">
+                <img src="../icons/Scène.svg">
+              </div>
+              <div class="objects">
+                <p>
+                  Scène : 8 x 5 x 0,8 mètres
+                </p>
+              </div> 
+            </div>
             <!-- CUISINE -->
             <div class="specs">
               <div class="objects">
