add legal notice

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -66,7 +66,7 @@
                   </section>
                 </section>
                 <section class="booking container">
-                 <input class="bookingButton" type="submit" value="send" name="send">
+                 <input class="bookingButton" type="submit" value="Réserver" name="send">
                 </section>
               </form>
     </main>
