--- a/pages/book.html
+++ b/pages/book.html
@@ -7,15 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/book.css">
-    <script src="scripts/main.js">
+    <link rel="stylesheet" href="../styles/nav.css">
+    <link rel="stylesheet" href="../styles/footer.css"> 
+    <script src="../scripts/main.js">
     </script>
   </head>
   <body>
     <head>
       <nav>
-          <div class="logo">
-              <h4>Centre Congrès</h4>
-          </div>
+          <a class="logo" href="index.html">Centre de Congrès</a>
           <ul class="nav-links">
               <li><a href="#">Nos Salles</a></li>
               <li><a href="#">Réserver</a></li>
@@ -74,7 +74,6 @@
                     <input class="main" type="text" name="email" id="emailinput">
                   </section>
                 </section>
-
                 <section class="secondFlexbox">
                   <section class="item">
                     <label for="date">Date</label><br>
@@ -88,38 +87,37 @@
                    <label for="number">Nombre de participants</label><br>
                    <input class="main" type="text" name="number" id="nameinput">
                   </section>
-                  </section>
-                  <section class="thirdFlexbox">
+                </section>
+                <section class="thirdFlexbox">
+                <section class="item book">
+                  <p>Envisagez-vous une restauration ?</p>
+                  <div class="choice">
+                    <div class="restoChoice">
 
-                   <section class="item book">
-                    <p>Envisagez-vous une restauration ?</p>
-                    <div class="choice">
-                      <div class="restoChoice">
+                      <label class="choiceContainer ">Oui, une restauration chaude
+                        <input class="hot" type="radio" name="resto" value="Restauration chaude" checked="checked">
+                        <span class="checkmark"></span>
+                      </label>
 
-                        <label class="choiceContainer">Oui, une restauration chaude
-                         <input type="checkbox" checked="checked">
-                         <span class="checkmark"></span>
-                        </label>
-
-                        <label class="choiceContainer">Oui, une restauration froide
-                          <input type="checkbox">
-                          <span class="checkmark"></span>
-                        </label>
+                      <label class="choiceContainer ">Oui, une restauration froide
+                        <input class="cold" type="radio" name="resto" value="Restauration froide">
+                        <span class="checkmark"></span>
+                      </label>
 
                       </div>
                       <div class="secondChoices">
                         <label class="choiceContainer">Un accueil café
-                          <input type="checkbox">
+                          <input class="item" type="radio" name="resto" value="Accueil Café">
                           <span class="checkmark"></span>
                         </label>
 
                         <label class="choiceContainer">Un cocktail
-                          <input type="checkbox">
+                          <input class="item" type="radio" name="resto" value="Cocktail">
                           <span class="checkmark"></span>
                         </label>
 
                         <label class="choiceContainer">Non
-                          <input type="checkbox">
+                          <input class="no" type="radio" name="resto" value="Restauration chaude">
                           <span class="checkmark"></span>
                         </label>
                       </div>
@@ -133,33 +131,41 @@
                   </section>
                 </section>
                 <section class="booking container">
-                 <input class="bookingButton" type="submit" value="RESERVER" name="send">
+                 <a href="../pages/sent.html"><input class="bookingButton" type="submit" value="Réserver" name="send"></a>
                 </section>
               </form>
-
+            </section>
+          </section>
     </main>
-    <footer  class="footerContainer">
-      <div class="footerDiv container">
-          <h6>Contacts</h6>
-          <span>congres@issoudun.fr</span>
-          <span>Fax : 0254033267</span>
-          <span>+33 2 54 03 32 61</span>
-          <span>Centre des Congrès «Champs Élysées»</span>
-          <span>Boulevard Roosevelt</span>
-          <span>BP 150</span>
-          <span>36105 Issoudun</span>
+    <footer>
+      <div>
+          <ul>
+              <li class="titre"><h3>Contacts</h3></li>
+              <li><p>congres@issoudun.fr</p></li>
+              <li><p>Fax: 0254033267</p></li>
+              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Centre de Congrès "Champs Élysées"</p></li>
+              <li><p>Boulevard Roosevelt</p></li>
+              <li><p>BP 150</p></li>
+              <li><p>36105 Issoudun</p></li>
+          </ul>
       </div>
-      <div class="footerDiv container">
-          <h6>À découvrir sur Issoudun</h6>
-          <a href="https://www.biptv.tv/">Bip TV</a>
-          <a href="https://www.ccacissoudun.tv/">Centre Culturel Albert Camus</a>
-          <a href="https://www.museeissoudun.tv/">Musée de l'Hospice Saint Roch</a>
-          <a href="http://www.issoudun.fr/">Site de la ville d'Issoudun</a>
+      <div>
+          <ul>
+              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+              <li><a href="#">Bip TV</a></li>
+              <li><a href="#">Centre culturel Albert Camus</a></li>
+              <li><a href="#">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="#">Ville d'Issoudun</a></li>
+          </ul>
       </div>
-      <div class="footerDiv container">
-          <h6><a href="#">Mentions légales</a></h6>
+      <div>
+          <ul>
+              <li><h3><a class="titre" href="#">Mentions légales</a></h3></li>
+          </ul>
       </div>
     </footer>
-    <script src="nav.js"></script>
+    <script src="../scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
+    <script src="../scripts/book.js"></script>
   </body>
 </html>
