--- a/index.html
+++ b/index.html
@@ -3,59 +3,119 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="description de ma page">
-    <link rel="stylesheet" href="styles/main.css">
+    <link href="styles/hover-min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/card.css">
     <title>Card Issoudun Project </title>
   </head>
   <body>
     <div class="containerCard">
-      <div class="card" id="salleDeR">
+      <div class="card hvr-grow hvr-shadow" id="salleDeR">
         <div class="cardLeftPart">
-          <img src="images\salle de réception\grandeSalle1.jpg" alt="Salle de réception">
+          <img src="images\SalleDeReception\grandeSalle1.jpg" alt="Salle de réception">
         </div>
         <div class="cardRightPart">
           <h2>SALLE DE RÉCEPTION</h2>
+          <div class="iconText">
+            <div class="icon">
+              <img src="icons/Personnes.svg" alt="personnes">
+              <h3>600</h3>
+            </div>
+            <div class="button">
+              <a href="#">RÉSERVER</a>
+            </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card">
+      <div class="card hvr-grow hvr-shadow">
         <div class="cardLeftPart">
-          <img src="images\amphithéâtre\amphi1.jpg" alt="Amphithéatre Pierre Selleron">
+          <img src="images\amphi\amphi1.jpg" alt="Amphithéatre Pierre Selleron">
         </div>
         <div class="cardRightPart">
           <h2>AMPHITHÉATRE PIERRE SELLERON</h2>
+          <div class="iconText">
+            <div class="icon">
+              <img src="icons/Personnes.svg" alt="personnes">
+              <h3>350</h3>
+            </div>
+            <div class="icon" id="sceneSize">
+              <img src="icons/spotlight.svg" alt="Scène">
+              <h3>Scène</h3>
+            </div>
+            <div id="amphi" class="button">
+              <a href="#">RÉSERVER</a>
+            </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card">
+      <div class="card hvr-grow hvr-shadow">
           <div class="cardLeftPart">
             <img src="images\hall\hall4.jpg" alt="Hall d'accueil">
           </div>
           <div class="cardRightPart">
             <h2>HALL D'ACCUEIL</h2>
+            <div class="iconText">
+              <div class="icon" id="regleSize">
+                <img src="icons/Règle.svg" alt="règle">
+                <h3>315 mètres carrés</h3>
+              </div>
+              <div class="icon" id="sunSize">
+                <img src="icons/sun.svg" alt="soleil">
+                <h3>Lumière naturelle</h3>
+              </div>
+              <div id="hallAcc" class="button">
+                <a href="#">RÉSERVER</a>
+              </div>
+              </div>
+            </div>
           </div>
-      </div>
-      <div class="card">
+      <div class="card hvr-grow hvr-shadow">
         <div class="cardLeftPart">
           <img src="images\cuisines professionnelles\cuisines2.jpg" alt="Cuisines Professionelles">
         </div>
         <div class="cardRightPart">
           <h2>CUISINES PROFESSIONELLES</h2>
+          <div class="iconText">
+            <div class="icon" id="forkSize">
+              <img src="icons/Fourchette.svg" alt="fourchette">
+              <h3>Accès direct à la salle de réception</h3>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card">
+      <div class="card hvr-grow hvr-shadow">
         <div class="cardLeftPart">
-          <img src="images\espace numérique\epn2.jpg" alt="Espace numérique">
+          <img src="images\EspaceNumerique\epn2.jpg" alt="Espace numérique">
         </div>
         <div class="cardRightPart">
           <h2>ESPACES NUMÉRIQUES</h2>
+          <div class="iconText">
+            <div class="icon" id="wifiSize">
+              <img src="icons/Internet.svg" alt="personnes">
+              <h3>Accès Internet</h3>
+            </div>
+            <div class="button">
+              <a href="#">RÉSERVER</a>
+            </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card">
+      <div class="card hvr-grow hvr-shadow">
         <div class="cardLeftPart">
-          <img src="images\salles de réunion\reunion5.jpg" alt="Hall de réunion">
+          <img src="images\SallesDeReunion\reunion5.jpg" alt="Hall de réunion">
         </div>
         <div class="cardRightPart">
           <h2>HALL DE RÉUNION</h2>
+          <div class="iconText">
+            <div class="icon">
+              <img src="icons/Personnes.svg" alt="personnes">
+              <h3>20-50</h3>
+            </div>
+            <div class="button">
+              <a href="#">RÉSERVER</a>
+            </div>
+            </div>
+          </div>
         </div>
-      </div>
     </div>
   </body>
 </html>
