--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -14,20 +14,26 @@
   <body>
     <header>
       <nav>
-          <div class="logo">
-              <h4>Centre Congrès</h4>
-          </div>
-          <ul class="nav-links">
-              <li><a href="#">Nos Salles</a></li>
-              <li><a href="#">Réserver</a></li>
-              <li><a href="#">Nous contacter</a></li>
-          </ul>
-          <div class="burger">
-              <div class="line1"></div>
-              <div class="line2"></div>
-              <div class="line3"></div>
-          </div>
-      </nav>
+        <a class="logo" href="index.html">Centre de Congrès</a>
+        <ul class="nav-links">
+            <li>
+                <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+                <ul class="submenu">
+                    <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
+                    <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
+                    <li><a href="pages/SalleDeReception">Salle de réception</a></li>
+                    <li><a href="pages/SalleDeReunion">Salle de réunion</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Réserver</a></li>
+            <li><a href="#">Nous contacter</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
     </header>
     <main class="container">
       <div class="square"></div>
